# ots-hello-world

./: README.md  pyproject.toml
OTS-Plugin-Template/: pyproject.toml
OTS-Plugin-Template/ots_hello_plugin/: cot_generator.py  rabbitmq_client.py
ots_hello_plugin/: __init__.py  app.py  default_config.py
ots_hello_plugin/ui/: index.html
ots_hello_plugin/ui/assets/: me i fear.jpg:Zone.Identifier
